--- a/README
+++ b/README
@@ -1,11 +1,11 @@
 Rockband 3 ProDrum Midi Driver
-by Randommatt and Spencer
+by Randommatt and ssj71
 
-Version 0.3
+Version 0.4
 
-Support for rb1 xbox drumkit has been added. 
+Support for xbox and ps3 rockband drumkit has been added. 
 Problem with dynamic velocity detection for RB2 and RB3-pro kits is solved. 
-
+Command line options to assign any midi mapping is now implemented.
 
 Since Ubuntu 12.04 and other "newer distros" regular cmmi may not work so please try the following:
 
@@ -13,9 +13,20 @@ Since Ubuntu 12.04 and other "newer distros" regular cmmi may not work so please
 
 then running the output program using
 
-./rbdrum2midi
+ ./rbdrum2midi
 
-For addition information on useage, run it with the -h option.
+For addition information on useage (such as assigning the midi values), run it with the -h option.
+If your drumkit doesn't seem to work right, we probably haven't had anyone to help us implement it yet. You can help us by sending us the output of
+
+ lsusb
+
+and running
+
+./rbdrum2midi -dbg
+
+(you will probably need to do it as root (sudo) unless you do the workaround found below). Hit each drum a couple of times and send us the output telling us which signals correspond to which drum. Please post these results on the discussion board of our sourceforge project at
+http://sourceforge.net/projects/rbdrum2midi/ 
+and we'll do our best to accommodate you quickly.
 
 See previous versions for more detailed instructions.
 
