--- a/README
+++ b/README
@@ -1,6 +1,106 @@
 Rockband 3 ProDrum Midi Driver
 by Randommatt and ssj71
 
+Version 0.5
+
+Installation:
+Requires libusb and libasound2 dev packages to compile and runtime libraries to run
+It follows the ussual cmmi:
+./configure
+make 
+make install
+
+if autotools isn't working correctly on your system you can compile the binary explicitly: 
+cd src
+gcc main.c rbkit.c rb1kit.c ghkit.c -o rbdrum2midi -lasound -lusb-1.0 
+you will have to execute this locally (or copy the binary to /usr/bin) when using this method..
+
+
+Execution:
+either run the executable localy: 
+src/rbdrum2midi (you may have to run this as root if you do not have the correct usb permissions)
+or run from terminal:
+rbdrum2midi
+
+
+Tested Drumkits:
+-PS3 rockband pro drumkit
+-PS3 Guitar Hero world tour kit
+-PS3 Rockband 1 drumkit
+-XBox 360 Rockband 1 drumkit
+If your kit isn't listed theres a chance it will still work. If it is a rockband kit try the option '-rb1'.If it doesn't we will happily add support for your kit if you can build and run the commands:
+lsusb
+/rbdrumkit -dbg
+Hit each drum a few times and copy and paste the output to a discussion topic in our sourceforge project page at http://sourceforge.net/projects/rbdrum2midi/
+
+
+Usage:
+connect rbdrumkit wireless dongle (PS3 works, Wii should, xbox probably won't), 
+start rbdrum2midi. This will create an ALSA midiport, start the jack audio server and Hydrogen,
+in the connection window under the alsa tab connect "Game Drumkit Client" to Hydrogen. You may also need the a2j bridge.
+
+run with the '-h' option to see the full useage.
+
+the midi notes are mapped as follows
+
+RB3 drumkit default midi mapping: 
+kick pedal 1: 	midi note 36
+kick pedal 2:   hihat mode (controlling yellow cymbal)	
+red pad : 	midi note 37
+yellow pad:	midi note 38
+yellow Cymbal:	midi note 41 when kick2 is down, 42 when it is up.
+blue pad:	midi note 39
+blue Cymbal:	midi note 43
+green pad:	midi note 40
+green Cymbal:	midi note 45
+
+RB1 drumkit default midi mapping: 
+kick pedal : 	midi note 36 
+red pad : 	midi note 37
+yellow pad:	midi note 38 
+blue pad:	midi note 39 
+green pad:	midi note 40 
+
+Guitar Hero drumkit default midi mapping:  
+kick pedal : 	midi note 36
+red pad : 	midi note 37
+yellow Cymbal:	midi note 41
+blue pad:	midi note 39
+Orange Cymbal:	midi note 43
+green pad:	midi note 40
+
+This corresponds to the setup for the Hydrogen YamahaVintageKit (note that you can easily change the mapping to GM using the command line arguments).
+
+Note that only the pro-drumkit and Guitar Hero drumkits have velocity information. This is a hardware limitation.
+
+With defaults only rockband drumkits have a hihat pedal as other drumkits only have a single pedal.
+However the single pedal on the other drumkits can become the hat pedal through the command line arguments.
+Hihat mode changes the hihat drum (default yellow cymbal) midi note when the pedal is opened or closed
+You can set the 2 midi values with args -hto and -htc as well as which drum and pedal control the hihat.
+The pedal can also play a sample by assigning the hat pedal a midi note value (i.e. -htp bkb -bkb 44).i
+Some samplers will play the appropriate hat sample depending on whether the hat pedal note has sent a note off.
+To do this (disable the note switching) assign a 0 to the hat pedal (arg -htp 0) and assign the pedal 
+the note you wish (i.e. -bkb 44). This interface was concieved as the simplest while maintaining 
+flexibility for these different methods.
+
+To fix usb permission problems create the file 90-drumkit.rules with the following line:
+
+
+SUBSYSTEM=="usb", ATTR{idVendor}=="12ba", ATTR{idProduct}=="0210", GROUP="audio", MODE="0664"
+SUBSYSTEM=="usb", ATTR{idVendor}=="12ba", ATTR{idProduct}=="0120", GROUP="audio", MODE="0664"
+SUBSYSTEM=="usb", ATTR{idVendor}=="1bad", ATTR{idProduct}=="0003", GROUP="audio", MODE="0664"
+SUBSYSTEM=="usb", ATTR{idVendor}=="1bad", ATTR{idProduct}=="0005", GROUP="audio", MODE="0664"
+
+
+this will work if your linux distro has an "audio" group and your user is a member, otherwise substitute "audio" with "users". 
+Place this file in /etc/udev/rules.d/ and reload the udev deamon.
+
+The original programs' copyrights, disclaimers and limitations still hold.
+
+
+======OLD README CONTENT=======
+ (left for historical reasons)
+
 Version 0.4
 
 Complete code rewrite for tidyness and modularity, for RB1 kits the option is now -rb1 for both xbox and ps3.
