--- a/README
+++ b/README
@@ -32,7 +32,7 @@ Tested Drumkits:
 If your kit isn't listed theres a chance it will still work. If it is a rockband kit try the option '-rb1'.If it doesn't we will happily add support for your kit if you can build and run the commands:
 lsusb
 /rbdrumkit -dbg
-Hit each drum a few times and copy and paste the output to a discussion topic in our sourceforge project page at http://sourceforge.net/projects/rbdrum2midi/
+Hit each drum a few times and copy and paste the output to a new issue in github https://github.com/rbdrum2midi/rbdrum2midi/issues
 
 
 Usage:
