--- a/README
+++ b/README
@@ -1,7 +1,7 @@
-Rockband Drum Midi Driver
+Rockband Instrument Midi Driver
 by Randommatt and ssj71
 
-Version 0.5
+Version 0.6
 
 Installation:
 Requires libusb-1.0, libjack, and libasound2 dev packages to compile and runtime libraries to run
@@ -25,7 +25,7 @@ rbdrum2midi
 
 
 Tested Drumkits:
--PS3 rockband pro drumkit
+-PS3 Rockband pro drumkit
 -PS3 Guitar Hero world tour kit
 -PS3 Rockband 1 drumkit
 -XBox 360 Rockband 1 drumkit
@@ -34,6 +34,9 @@ lsusb
 /rbdrumkit -dbg
 Hit each drum a few times and copy and paste the output to a new issue in github https://github.com/rbdrum2midi/rbdrum2midi/issues
 
+Other Tested Instruments:
+-PS3 Rockband wireless guitar
+-Xbox 360 Rockband wired guitar
 
 Usage:
 connect rbdrumkit wireless dongle (PS3 works, Wii should, xbox probably won't), 
